# mpu6050Pi

./: Makefile.am  Makefile.in  README  README.md  build.sh  config.h.in  configure  configure.in
example/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  test.cpp
src/: DescMPU6050Registers.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h  mpumanager.cpp  mpumanager.h
