#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([mpu6050dmp], [5.1], [bug@microsoft.com])
AC_CONFIG_SRCDIR([src/inv_mpu.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(mpu6050dmp,5.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_PROG_RANLIB

# Checks for library functions.
AC_CHECK_FUNCS([clock_gettime memset])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
